--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -18,6 +18,48 @@
 #
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
-
 en:
+  errors:
+    format: "%{message}"
   hello: "Hello world"
+  helpers:
+    submit:
+      user:
+        create: "회원가입"
+        update: "Update"
+  activerecord:
+    attributes:
+      user:
+        user_name: "아이디"
+        phone_no: "전화번호"
+    errors:
+      models:
+        user:
+          attributes:
+            user_name:
+              blank: "아이디를 입력하세요"
+            phone_no:
+              blank: "전화번호를 입력하세요"
+
+# confirmation	-	:confirmation	-
+# acceptance	-	:accepted	-
+# presence	-	:blank	-
+# length	:within, :in	:too_short	count
+# length	:within, :in	:too_long	count
+# length	:is	:wrong_length	count
+# length	:minimum	:too_short	count
+# length	:maximum	:too_long	count
+# uniqueness	-	:taken	-
+# format	-	:invalid	-
+# inclusion	-	:inclusion	-
+# exclusion	-	:exclusion	-
+# associated	-	:invalid	-
+# numericality	-	:not_a_number	-
+# numericality	:greater_than	:greater_than	count
+# numericality	:greater_than_or_equal_to	:greater_than_or_equal_to	count
+# numericality	:equal_to	:equal_to	count
+# numericality	:less_than	:less_than	count
+# numericality	:less_than_or_equal_to	:less_than_or_equal_to	count
+# numericality	:only_integer	:not_an_integer	-
+# numericality	:odd	:odd	-
+# numericality	:even	:even	-
