--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -40,6 +40,7 @@ en:
               blank: "아이디를 입력하세요"
             phone_no:
               blank: "전화번호를 입력하세요"
+              invalid: "형식에 맞지 않는 전화번호 입니다"
 
 # confirmation	-	:confirmation	-
 # acceptance	-	:accepted	-
