--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -19,6 +19,13 @@
 # To learn more, please read the Rails Internationalization guide
 # available at http://guides.rubyonrails.org/i18n.html.
 en:
+  views:
+    pagination:
+      first: "<<"
+      last: ">>"
+      previous: "<"
+      next: ">"
+      truncate: ".."
   errors:
     format: "%{message}"
   hello: "Hello world"
