follower count error fixed

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -34,6 +34,9 @@ en:
       user:
         create: "회원가입"
         update: "저장"
+      message:
+        create: "Post"
+        update: "저장"
   activerecord:
     attributes:
       user:
